examples/negative/parse_errors/L1/if_no_end.ob
MODULE IfNoEnd;

VAR b: BOOLEAN;
    x: INTEGER;

BEGIN
  IF b 
  THEN
    x := 4
  ELSE
    x := 42
END IfNoEnd.
